# core

./: .drive  .drive-mc  .gitignore  Justfile  README.md  del.ipynb  dev.ipynb  migrate.ipynb  predict.sh  remeta.ipynb  requirements.txt
chess-dataset/src/chess_dataset/: __init__.py  __init__.pyi  dataset.py  meta.py
moveread-core/: Justfile  README.md  pyproject.toml
moveread-core/src/moveread/core/: __init__.pyi  _types.py  cli.old.py  cli.py  core.py  export.py
moveread-core/src/moveread/core/cli/: export.py
