[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moveread-core"
version = "0.2.0"
authors = [
  {name="Marcel Claramunt", email="marcel@moveread.com"}
]
description = "Core Moveread Dataset"
dependencies = [
  "pydantic", "haskellian", "robust-extraction2",
  "chess-pairings", "chess-notation",
  "kv-api", "kv-sqlite-sync", "kv-fs"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
repo = "https://github.com/moveread/moveread-data.git"

# [project.optional-dependencies]
# test = [
#   "pytest < 5.0.0",
#   "pytest-cov[all]"
# ]